# phone_book

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
contacts/: admin.py  forms.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_contact_user.py
contacts/templates/: base.html
contacts/templates/contacts/: add_contact.html  contact_list.html  login.html  register.html
phone_book/: __init__.py  admin.py  apps.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
phone_book/migrations/: 0001_initial.py  0002_contact_address.py  0002_contact_user.py  0003_alter_contact_address.py  0003_contact_created_at_contact_updated_at.py
phone_book/templates/: base.html
phone_book/templates/contacts/: add_contact.html  contact_list.html  login.html  register.html
