[project]
name = "phone-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "certifi==2025.7.14",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.2",
    "distlib==0.3.9",
    "django==5.2.4",
    "django-widget-tweaks==1.5.0",
    "filelock==3.18.0",
    "identify==2.6.12",
    "idna==3.10",
    "nodeenv==1.9.1",
    "platformdirs==4.3.8",
    "pre-commit==4.2.0",
    "pyyaml==6.0.2",
    "sqlparse==0.5.3",
    "urllib3==2.5.0",
    "virtualenv==20.31.2",
]
